# test_django

./: pyproject.toml  requirements.txt
accounts/: models.py
accounts/migrations/: 0001_initial.py
app/: models.py
app/migrations/: 0001_initial.py
test_django/: settings.py
