[tool.poetry]
name = "test-django"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]
readme = "README.md"
packages = [{include = "test_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pyjwt = "^2.6.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
